--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -10,13 +10,13 @@ if(DEFINED ENV{BUILD_MPI} AND "$ENV{BUILD_MPI}" STREQUAL "true")
 	target_link_libraries(mpi PUBLIC  fmt MPI::MPI_CXX common)
 	target_include_directories(mpi PUBLIC ${MPI_CXX_INCLUDE_PATH})
 
-if(DEFINED ENV{BUILD_OPTIMIZED} AND "$ENV{BUILD_OPTIMIZED}" STREQUAL "true")
-		message("Building optimized version of MPI")
-	target_compile_options(mpi PUBLIC -O3)
-else()
-	target_compile_options(mpi PUBLIC -O0)
-		message("Building non-optimized version of MPI")
-endif()
+# if(DEFINED ENV{BUILD_OPTIMIZED} AND "$ENV{BUILD_OPTIMIZED}" STREQUAL "true")
+# 		message("Building optimized version of MPI")
+# 	target_compile_options(mpi PUBLIC -O3)
+# else()
+# 	target_compile_options(mpi PUBLIC -O0)
+# 		message("Building non-optimized version of MPI")
+# endif()
 
 # custom target to run mpi target with mpirun
 	add_custom_target(run_mpi
